added error styles

--- a/jest/jest.css
+++ b/jest/jest.css
@@ -171,15 +171,28 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
 
 /* Jest styles */
 
-body                { width: 760px;
-                      margin: 0 auto 0 auto;
+body                { width: 700px;
+                      margin: 10px auto 10px auto;
                       border: 1px solid #555; }
 
-#summary            { display: inline-block;
-                      width: 350px; 
-                      margin-left: 10px; }
+#warning            { font-size: 16px;
+                      color: rgba(250, 250, 200, 1); }
+                      
+#error              { width: 100%;
+                      background-color: rgba(255, 100, 100, 1);
+                      color: rgba(200, 250, 250, 1);
+                      line-height: 1.5em;
+                      font-size: 14px;
+                      text-align: center;
+                      text-shadow:  0 -1px rgba(50, 50, 50, .5);
+                      border-bottom: rgba(250, 250, 200, .7); }
 
-#summary p          { margin-left: 20px; }
+#summary            { width: 350px; 
+                      margin-left: auto;
+                      margin-right: auto; }
+
+#summary h1,
+#summary p          { text-align: center; }
 
 #light              { display: inline-block;
                       height: 10px;
@@ -188,7 +201,16 @@ body                { width: 760px;
 
 h2                  { margin-left: 0; }
 
-ol li               { margin-left: 20px; }
+ol li               { margin-left: 30px; }
+
+#jest-tests ol      { width: 400px;
+                      margin-left: auto;
+                      margin-right: auto; }
+
+ol ol               { width: 300px;
+                      margin-left: auto;
+                      margin-right: auto; }
+
 
 
 
