--- a/jest/jest.css
+++ b/jest/jest.css
@@ -1,182 +1,60 @@
-/* =============================================================================
-HTML5 display definitions
-========================================================================== */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
-audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
-audio:not([controls]) { display: none; }
-[hidden] { display: none; }
-
-
-/* =============================================================================
-Base
-========================================================================== */
-
-/*
-* 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
-* 2. Force vertical scrollbar in non-IE
-* 3. Prevent iOS text size adjust on device orientation change, without disabling user zoom: h5bp.com/g
-*/
-
-html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-
-body { margin: 0; font-size: 13px; line-height: 1.231; }
-
-body, button, input, select, textarea { font-family: sans-serif; color: #222; }
-
-/*
-* Remove text-shadow in selection highlight: h5bp.com/i
-* These selection declarations have to be separate
-* Also: hot pink! (or customize the background color to match your design)
-*/
-
-::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
-::selection { background: #fe57a1; color: #fff; text-shadow: none; }
-
-
-/* =============================================================================
-Links
-========================================================================== */
-
-a { color: #00e; }
-a:visited { color: #551a8b; }
-a:hover { color: #06e; }
-a:focus { outline: thin dotted; }
-
-/* Improve readability when focused and hovered in all browsers: h5bp.com/h */
-a:hover, a:active { outline: 0; }
-
-
-/* =============================================================================
-Typography
-========================================================================== */
-
-abbr[title] { border-bottom: 1px dotted; }
-
-b, strong { font-weight: bold; }
-
-blockquote { margin: 1em 40px; }
-
-dfn { font-style: italic; }
-
-hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
-
-ins { background: #ff9; color: #000; text-decoration: none; }
-
-mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
-
-/* Redeclare monospace font family: h5bp.com/j */
-pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
-
-/* Improve readability of pre-formatted text in all browsers */
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
-
-q { quotes: none; }
-q:before, q:after { content: ""; content: none; }
-
-small { font-size: 85%; }
-
-/* Position subscript and superscript content without affecting line-height: h5bp.com/k */
-sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
-sup { top: -0.5em; }
-sub { bottom: -0.25em; }
-
-
-/* =============================================================================
-Lists
-========================================================================== */
-
-ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
-dd { margin: 0 0 0 40px; }
-nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
-
-
-/* =============================================================================
-Embedded content
-========================================================================== */
-
-/*
-* 1. Improve image quality when scaled in IE7: h5bp.com/d
-* 2. Remove the gap between images and borders on image containers: h5bp.com/e
-*/
-
-img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
-
-/*
-* Correct overflow not hidden in IE9
-*/
-
-svg:not(:root) { overflow: hidden; }
-
-
-/* =============================================================================
-Figures
-========================================================================== */
-
-figure { margin: 0; }
-
-
-/* =============================================================================
-Forms
-========================================================================== */
-
-form { margin: 0; }
-fieldset { border: 0; margin: 0; padding: 0; }
-
-/* Indicate that 'label' will shift focus to the associated form element */
-label { cursor: pointer; }
-
-/*
-* 1. Correct color not inheriting in IE6/7/8/9
-* 2. Correct alignment displayed oddly in IE6/7
-*/
-
-legend { border: 0; *margin-left: -7px; padding: 0; }
-
-/*
-* 1. Correct font-size not inheriting in all browsers
-* 2. Remove margins in FF3/4 S5 Chrome
-* 3. Define consistent vertical alignment display in all browsers
-*/
-
-button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
-
-/*
-* 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
-* 2. Correct inner spacing displayed oddly in IE6/7
-*/
-
-button, input { line-height: normal; *overflow: visible; }
-
-/*
-* 1. Display hand cursor for clickable form elements
-* 2. Allow styling of clickable form elements in iOS
-*/
-
-button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
-
-/*
-* Consistent box sizing and appearance
-*/
-
-input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; }
-input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
-input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
-
-/*
-* Remove inner padding and border in FF3/4: h5bp.com/l
-*/
-
-button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 /* Jest styles */
 
 body                { width: 700px;
                       margin: 10px auto 10px auto;
-                      border: 1px solid #555; }
+                      border: 1px solid #555;
+                      -webkit-border-radius: 2px; 
+                      -moz-border-radius: 2px; 
+                      border-radius: 2px;    
+                      -moz-background-clip: padding; 
+                      -webkit-background-clip: padding-box; 
+                      background-clip: padding-box; }
 
-#warning            { font-size: 16px;
-                      color: rgba(250, 250, 200, 1); }
+ol li               { margin-left: 30px; }
                       
 #error              { width: 100%;
                       background-color: rgba(255, 100, 100, 1);
@@ -186,30 +64,21 @@ body                { width: 700px;
                       text-align: center;
                       text-shadow:  0 -1px rgba(50, 50, 50, .5);
                       border-bottom: rgba(250, 250, 200, .7); }
-
-#summary            { width: 350px; 
-                      margin-left: auto;
-                      margin-right: auto; }
-
-#summary h1,
-#summary p          { text-align: center; }
+                      
+.warning            { font-size: 16px;
+                      color: rgba(250, 250, 200, 1); }
 
 #light              { display: inline-block;
                       height: 10px;
-                      width: 10px;
-                      background-color: rgba(100, 255, 100, 1); }
+                      width: 10px; }
+                      
+.running            { background-color: rgba(100, 100, 100, .5); }
+                      
+.passed             { background-color: rgba(100, 255, 100, 1); }
 
-h2                  { margin-left: 0; }
+.failed             { background-color: rgba(255, 100, 100, 1); }
 
-ol li               { margin-left: 30px; }
 
-#jest-tests ol      { width: 400px;
-                      margin-left: auto;
-                      margin-right: auto; }
-
-ol ol               { width: 300px;
-                      margin-left: auto;
-                      margin-right: auto; }
 
 
 
