--- a/jest/jest.css
+++ b/jest/jest.css
@@ -44,33 +44,114 @@ table {
 
 /* Jest styles */
 
+/* base style */
 body                { width: 700px;
                       margin: 10px auto 10px auto;
                       border: 1px solid #555;
+                      font-family: "Helvetica Neue Light", 
+                                   "HelveticaNeue-Light", 
+                                   "Helvetica Neue", 
+                                   Calibri, 
+                                   Helvetica, 
+                                   Arial, 
+                                   sans-serif;
                       -webkit-border-radius: 2px; 
                       -moz-border-radius: 2px; 
                       border-radius: 2px;    
                       -moz-background-clip: padding; 
                       -webkit-background-clip: padding-box; 
-                      background-clip: padding-box; }
+                      background-clip: padding-box;
+                      z-index: 1; }
 
-ol li               { margin-left: 30px; }
+ol ol               { margin-left: 30px; }
+
+ol h3,
+ol h2               { margin-bottom: 10px; }
+
+ol li               { margin-left: 60px;
+                      margin-bottom: 5px;
+                      position: relative;
+                      top: 10%; }
+
+/* formatting */
+#summary,
+#jest-tests         { margin-top: 10px;
+                      margin-left: 10px; }
+
+#summary h1         { font-size: 36px;
+                      font-weight: bold;
+                      font-family: Helvetica, Arial, sans-serif; }
                       
-#error              { width: 100%;
-                      background-color: rgba(255, 100, 100, 1);
-                      color: rgba(200, 250, 250, 1);
-                      line-height: 1.5em;
-                      font-size: 14px;
+#user-info          { width: 120px;
+                      height: 45px;
+                      margin-left: 350px;
+                      margin-top: -46px;
+                      background-color: rgba(200,200,200, 1);
+                      border: 2px 2px 1px rgba(50, 50, 50, .7);
                       text-align: center;
-                      text-shadow:  0 -1px rgba(50, 50, 50, .5);
-                      border-bottom: rgba(250, 250, 200, .7); }
+                      -webkit-box-shadow: 1px 1px 0px #222, 2px 2px 0px #222, 2px 0px 0px #222;
+                      -moz-box-shadow: 1px 1px 0px #222, 2px 2px 0px #222, 2px 0px 0px #222;
+                      box-shadow: 1px 1px 0px #222, 2px 2px 0px #222, 2px 0px 0px #222;
+                      -webkit-border-radius: 1px; 
+                      -moz-border-radius: 1px; 
+                      border-radius: 1px;    
+                      -moz-background-clip: padding; 
+                      -webkit-background-clip: padding-box; 
+                      background-clip: padding-box; }
+                    
+#user-info p        { position: relative;
+                      top: 20%;
+                      font-size: 12px;
+                      line-height: 1.2em;
+                      color: #111;
+                      text-shadow: 0 -1px 0 rgba(255, 255, 255, .25); }
                       
-.warning            { font-size: 16px;
-                      color: rgba(250, 250, 200, 1); }
+ol h2               { font-size: 22px; }
+                      
 
+/* error styles */                      
+#error              { width: 750px;
+                      margin: -1px auto 0 auto;
+                      position: relative;
+                      color: #fff;
+                      font: 16px Arial, Helvetica, sans-serif;
+                      text-decoration: none;
+                      text-align: center;
+                      line-height: 1.5em;
+                      border: 1px solid #888;
+                      background-color: rgba(255, 100, 100, 1);
+                      background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,.0)), to(rgba(0,0,0,.25)));
+                      text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
+                      box-shadow: inset 0 0 2px rgba(255,255,255,.75),inset 0 -5px 20px rgba(0,0,0,.15), 0 2px 5px rgba(0,0,0,.25);
+                      -webkit-transition: all .1s linear;
+                      border-radius: 0 0 10px 10px; }
+                      
+.error              { font-size: 16px;
+                      color: rgba(250, 250, 200, 1); }
+                      
+.warning            { margin: 2px 0 2px 30px;
+                      padding-left: 5px;
+                      position: relative;
+                      color: #fff;
+                      font: 14px Arial, Helvetica, sans-serif;
+                      text-decoration: none;
+                      text-align: left;
+                      display: inline-block;
+                      width: 624px;
+                      line-height: 1.5em;
+                      border: 1px solid #888;
+                      background-color: rgba(255, 100, 100, 1);
+                      background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,.0)), to(rgba(0,0,0,.25)));
+                      text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
+                      box-shadow: inset 0 0 2px rgba(255,255,255,.75),inset 0 -5px 20px rgba(0,0,0,.15), 0 2px 5px rgba(0,0,0,.25);
+                      -webkit-transition: all .1s linear;
+                      border-radius: 3px 0 0 3px;
+                      z-index: -100; }
+                      
+/* indicator light style */
 #light              { display: inline-block;
-                      height: 10px;
-                      width: 10px; }
+                      height: .8em;
+                      width: .8em; }
                       
 .running            { background-color: rgba(100, 100, 100, .5); }
                       
@@ -78,8 +159,30 @@ ol li               { margin-left: 30px; }
 
 .failed             { background-color: rgba(255, 100, 100, 1); }
 
+.test               { margin: 0 0 0 -3px;
+                      position: relative;
+                      color: #fff;
+                      font: 13px Arial, Helvetica, sans-serif;
+                      text-decoration: none;
+                      text-align: center;
+                      display: inline-block;
+                      line-height: 1.5em;
+                      width: 50px;
+                      height: 20px;
+                      border: 1px solid #888;
+                      background-color: #ccc;
+                      background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,.0)), to(rgba(0,0,0,.25)));
+                      text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
+                      box-shadow: inset 0 0 2px rgba(255,255,255,.75),inset 0 -5px 20px rgba(0,0,0,.15), 0 2px 5px rgba(0,0,0,.25);
+                      -webkit-transition: all .1s linear;
+                      border-radius: 3px; }
 
+.failed.test        { border: 1px solid #933;
+                      background-color: #c66; }
 
+.passed.test        { border: 1px solid #395;
+                      background-color: #6c8; }
+                      
 
 
 
